<resources>
    <string name="app_name">pam praktikum firebase</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="save">Simpan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="uid">Uid</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="add_note">Tambah Note</string>
</resources>